force-app/main/default/objects/proh__ProcessingHub_Setting__c/fields/proh__Client_Id__c.field-meta.xml
<CustomField>
    <fullName>proh__Client_Id__c</fullName>
    <label>Client Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>