force-app/main/default/objects/proh__ProcessingHub_Setting__c/fields/proh__Expires__c.field-meta.xml
<CustomField>
    <fullName>proh__Expires__c</fullName>
    <label>Expires</label>
    <type>DateTime</type>
</CustomField>