force-app/main/default/objects/proh__ProcessingHub_Setting__c/fields/proh__Instance__c.field-meta.xml
<CustomField>
    <fullName>proh__Instance__c</fullName>
    <label>Instance</label>
    <length>255</length>
    <type>Text</type>
</CustomField>