force-app/main/default/objects/proh__ProcessingHub_Setting__c/fields/proh__Integration_User__c.field-meta.xml
<CustomField>
    <fullName>proh__Integration_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Integration User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>ProcessingHub_Settings</relationshipName>
    <type>Lookup</type>
</CustomField>