force-app/main/default/objects/proh__ProcessingHub_Setting__c/fields/proh__Org_ID__c.field-meta.xml
<CustomField>
    <fullName>proh__Org_ID__c</fullName>
    <label>Org ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>