force-app/main/default/objects/proh__ProcessingHub_Setting__c/fields/proh__Secret_Token__c.field-meta.xml
<CustomField>
    <fullName>proh__Secret_Token__c</fullName>
    <label>Secret Token</label>
    <length>255</length>
    <type>Text</type>
</CustomField>