force-app/main/default/objects/proh__ProcessingHub_Setting__c/listViews/proh__All.listView-meta.xml
<ListView>
    <fullName>proh__All</fullName>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>